# frond

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.moss/: index.sqlite
docs/: architecture.md  getting-started.md  index.md  introduction.md  package.json  philosophy.md  prior-art.md
docs/.vitepress/: config.ts
docs/primitives/: camera-controllers.md  character-controllers.md  index.md  procgen.md  state-machines.md  wfc.md
scripting/frond-gdscript/: body.gd  body.gd.uid  constraints.gd  constraints.gd.uid  equipment.gd  equipment.gd.uid  frond.gd.uid  plugin.cfg  snapshots.gd  snapshots.gd.uid  tags.gd  tags.gd.uid  transformation.gd  transformation.gd.uid
