[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhizome-lab/frond"

[workspace.dependencies]
# Math (bevy-compatible)
glam = "0.29"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }

# Random/noise
rand = "0.8"
noise = "0.9"

# Bevy ecosystem (use individual crates, not full bevy)
bevy_math = "0.15"
bevy_reflect = "0.15"
bevy_ecs = "0.15"
